--- a/css/about.css
+++ b/css/about.css
@@ -54,6 +54,11 @@ table {
 html, body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
+  
+}
+
+.body-hero-img {
+  margin-bottom: 20px;
 }
 
 h1, h2, h3, h4, h5 {
@@ -66,133 +71,97 @@ p {
     line-height: 1.4;
 }
 
+header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-top: 15px;
+  padding-bottom: 40px;
+  width: 800px;
+  margin: 0 auto;
+  
+}
+
+header nav{
+  display: flex;
+  width: 600px;
+  justify-content: flex-start;
+  font-size: 15px;
+}
+
+header nav a{
+  text-decoration: none;
+  color: black;
+  margin-right: 85px;
+}
+
+
+
 .container {
     width: 800px;
     margin: 0 auto;
 }
 
-header {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-end;
-    padding-top: 15px;
-    padding-bottom: 40px;
-    width: 800px;
-    margin: 0 auto;
-    
-  }
-  
-  header nav{
-    display: flex;
-    width: 600px;
-    justify-content: flex-start;
-    font-size: 15px;
-  }
-  
-  header nav a{
-    text-decoration: none;
-    color: black;
-    margin-right: 85px;
-  }
-  
-  .header .top-image{
-    margin-top: 20px;
-  }
 
 .top-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 20px;
-    border-bottom: 1px dashed black;
 }
 
 .top-content .text-container {
-    width: 48%;
-    padding: 0 1%;
-    padding-bottom: 20px;  
-}
-
-.middle-content {
+    width: 800px;
+    padding: 20px;  
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
 }
 
-.middle-content h2 {
-    padding: 0 2%;
-    margin-bottom: 0;
+
+  /*border: 1px solid green;*/
+
+
+body .main-section{
+  display: flex;
+  justify-content: flex-start;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
-.middle-content .boxes {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+.container .main-item{
+  width: 370px;
+  margin-bottom: 50px;
+  padding-bottom: 20px;
+  border-style: dashed;
+  border-color: black;
+  border-width: 0 0 1px 0;
 }
 
-.middle-content .boxes .box {
-    width: 12.5%;
-    height: 100px;
-    margin: 20px 2.5%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.middle-content .box1{
-    background-color: teal;
-  }
-  
-  .middle-content .box2{
-    background-color: gold;
-  }
-  
-  .middle-content .box3{
-    background-color: cadetblue;
-  }
-  
-  .middle-content .box4{
-    background-color: coral;
-  }
-  
-  .middle-content .box5{
-    background-color: crimson;
-  }
-  
-  .middle-content .box6{
-    background-color: forestgreen;
-  }
-  
-  .middle-content .box7{
-    background-color: darkorchid;
-  }
-  
-  .middle-content .box8{
-    background-color: hotpink;
-  }
-  
-  .middle-content .box9{
-    background-color: indigo;
-  }
-  
-  .middle-content .box10{
-    background-color: dodgerblue;
-  }
-
-
-.bottom-content {
-    display: flex;
-    margin: 0 2% 20px;
-    justify-content: space-around;
+.container .main-item-button{
+  border: 1px solid black;
+  width: 125px;
+  height: 35px;
+  border-radius: 8px;
+  display: flex;
+  background-color: #FFFFFF;
+  justify-content: center;
+  align-items: center;
 }
 
-.bottom-content .text-container {
-    padding-right: 4%;
+h3 {
+  padding-top: 10px;
 }
 
-.bottom-content .text-container:last-child {
-    padding-right: 0;
+p {
+  padding-bottom: 20px;
+}
+
+.container .bottom-content {
+  width: 800px;
+  padding: 0 20px;
+  padding-bottom: 20px;
 }
 
 footer {
@@ -212,4 +181,5 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+
 }
